--- a/cometchatDocs/package.json
+++ b/cometchatDocs/package.json
@@ -18,12 +18,12 @@
     "docusaurus:version:sdks": "docusaurus docs:version sdks"
   },
   "dependencies": {
-    "@docusaurus/core": "3.7.0",
+    "@docusaurus/core": "^3.7.0",
     "@docusaurus/plugin-client-redirects": "^3.7.0",
-    "@docusaurus/preset-classic": "3.7.0",
+    "@docusaurus/preset-classic": "^3.7.0",
     "@docusaurus/theme-search-algolia": "^3.7.0",
     "@easyops-cn/docusaurus-search-local": "^0.48.5",
-    "@mdx-js/react": "^3.0.0",
+    "@mdx-js/react": "^3.1.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
