--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,8 @@ jobs:
       
       - name: Build website
         run: npm run build
+        env:
+          BASE_URL: /${{ github.event.repository.name }}/
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
