--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "@docusaurus/types": "3.7.0",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.1",
     "typescript": "~5.6.2"
   },
   "browserslist": {
