--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.7.0",
-    "@docusaurus/tsconfig": "3.7.0",
+    "@docusaurus/tsconfig": "^3.7.0",
     "@docusaurus/types": "3.7.0",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
