custom sidbar updated and dropdownnavitem added in theme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@theme/*": ["./node_modules/@docusaurus/theme-classic/lib/theme/*"],
       "@site/*": ["./*"]
     },    // other options...
   },
