--- a/package.json
+++ b/package.json
@@ -18,24 +18,25 @@
     "docusaurus:version:sdks": "docusaurus docs:version sdks"
   },
   "dependencies": {
-    "@docusaurus/core": "3.7.0", 
-    "@docusaurus/plugin-client-redirects": "3.7.0", 
-    "@docusaurus/preset-classic": "3.7.0", 
-    "@docusaurus/theme-search-algolia": "3.7.0", 
-    "@easyops-cn/docusaurus-search-local": "^0.48.5", 
-    "@mdx-js/react": "^3.1.0", 
+    "@docusaurus/core": "3.7.0",
+    "@docusaurus/plugin-client-redirects": "3.7.0",
+    "@docusaurus/preset-classic": "3.7.0",
+    "@docusaurus/theme-search-algolia": "3.7.0",
+    "@easyops-cn/docusaurus-search-local": "^0.48.5",
+    "@mdx-js/react": "^3.1.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
-    "react": "^18.3.1", 
-    "react-dom": "^18.3.1", 
-    "react-icons": "^5.5.0" 
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-modern-drawer": "^1.4.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.7.0", 
-    "@docusaurus/tsconfig": "3.7.0", 
-    "@docusaurus/types": "3.7.0", 
-    "@types/node": "^18.19.0", 
-    "@types/react": "^18.3.0", 
+    "@docusaurus/module-type-aliases": "3.7.0",
+    "@docusaurus/tsconfig": "3.7.0",
+    "@docusaurus/types": "3.7.0",
+    "@types/node": "^18.19.0",
+    "@types/react": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.10",
