--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@docusaurus/theme-search-algolia": "3.7.0",
     "@easyops-cn/docusaurus-search-local": "^0.48.5",
     "@mdx-js/react": "^3.1.0",
+    "@types/react-tabs": "^5.0.4",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-modern-drawer": "^1.4.0"
+    "react-modern-drawer": "^1.4.0",
+    "react-tabs": "^6.1.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.7.0",
