--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@docusaurus/preset-classic": "3.7.0",
     "@docusaurus/theme-search-algolia": "3.7.0",
     "@easyops-cn/docusaurus-search-local": "^0.48.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mdx-js/react": "^3.1.0",
+    "@mui/material": "^7.0.2",
     "@types/react-tabs": "^5.0.4",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
