--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@easyops-cn/docusaurus-search-local": "^0.48.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.2",
     "@mdx-js/react": "^3.1.0",
     "@mui/material": "^7.0.2",
     "@types/react-tabs": "^5.0.4",
